# refx

./: .gitignore  README.md  pyproject.toml
docs/: guide.ipynb
nnx/: __init__.py  refs.py  transforms.py
refx/: __init__.py  fields.py  filters.py  partitioning.py  ref.py  ref_field.py  rng_stream.py  scope.py  tracers.py  transforms.py
tests/: test_custom_tuple.py  test_filters.py  test_partitioning.py  test_ref.py  test_ref_field.py  test_rng_stream.py
tests/test_nnx/: test_transforms.py
