[tool.poetry]
name = "refx"
version = "0.0.3"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
jax = ">=0.4.6"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
# simple-pytree = { path = "../simple-pytree", develop = true }
simple-pytree = ">=0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# coverage
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "@tp.overload",
    "@abstractmethod",
]
